fixtures/frontend/milestone-2/invalid/custom-source-provider-unknown-option/main.aivi
domain Duration over Int
    suffix ms : Int = value => Duration value

provider custom.feed
    option timeout : Duration
    wakeup: providerTrigger

@source custom.feed with {
    retry: 5ms
}
signal updates : Signal Int
